# gpt-uml-code-gen

./: .gitignore  LICENSE  README.md  chat-gpt-uml-kotlin-phase-1.py  chat-gpt-uml-kotlin-phase-2.py  chat-gpt-uml-kotlin.py  chat-gtp-play-by-play-announcer.py  diagram.txt  pyproject.toml  rules.txt  standup.py
data/: bruins-roster.json  leafs-roster.json  preview-article.txt  template.html
samples/src/main/java/com/client/sample-package/: SampleClass.kt  SampleFragment.kt  SampleRepository.kt  SampleViewModel.kt
samples/src/test/java/com/client/sample-package/: SampleClassTest.kt  SampleFragmentTest.kt  SampleRepositoryTest.kt  SampleViewModelTest.kt
